feat: criacao da estrutura e estilo do form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 :root {
     --dark-grey: #333333;
     --light-grey: #808080;
+    --light-text: #e6e6e6;
+    --medium-text: #999999;
     --yellow: #FFB612;
     --red: #dc0a17;
     --green: #2FC022;
