--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -88,7 +88,7 @@
 
 .form-group .checkbox-wrapper {
     color: var(--light-grey);
-    margin-top: 32px 0;
+    margin: 32px 0;
     position: relative;
     width: 100%;
 }
