--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<app-forms></app-forms>
+<div>
+    <app-header></app-header>
+    <app-forms (submitEvent)="onSubmit()"></app-forms>
+    <app-cards-list *ngIf="(showList | async)" [unitsList]="unitsList"></app-cards-list>
+</div>
