--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -3,12 +3,13 @@
         opened: card.opened
     }"> {{card.opened ? 'Aberto' : 'Fechado' }} </span>
     <h3>{{ card.title }}</h3>
-    <p>{{ card.content }}</p>
+    <p [innerHTML]="card.content"></p>
+    <div class="divider"></div>
     <ul>
-        <img [src]="'/assets/images/png/' + card.mask + '-mask.png'"/>
-        <img [src]="'/assets/images/png/' + card.towel + '-towel.png'"/>
-        <img [src]="'/assets/images/png/' + card.fountain + '-fountain.png'"/>
-        <img [src]="'/assets/images/png/' + card.locker_room + '-lockerroom.png'"/>  
+        <img *ngIf="card.mask" [src]="'/assets/images/png/' + card.mask + '-mask.png'"/>
+        <img *ngIf="card.towel" [src]="'/assets/images/png/' + card.towel + '-towel.png'"/>
+        <img *ngIf="card.fountain" [src]="'/assets/images/png/' + card.fountain + '-fountain.png'"/>
+        <img *ngIf="card.locker_room" [src]="'/assets/images/png/' + card.locker_room + '-lockerroom.png'"/>  
     </ul>
     <ul>
         <li *ngFor="let schedule of card.schedules">
